try to start grunt configuratioin

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -18,7 +18,7 @@ body {margin-bottom: 40px !important;}
             padding-bottom: 10px;
             margin-top: 5px;
             margin-bottom: 5px;
-            color: #0088CC !important;        
+            color: #0088CC !important;
             border-radius: 5px 5px 5px 5px !important;
         }
         >a:hover, >a:focus {
@@ -28,7 +28,7 @@ body {margin-bottom: 40px !important;}
     >li.active {
         >a {
             background-color: #0088CC !important;
-            color: #FFFFFF !important;            
+            color: #FFFFFF !important;
         }
     }
 }
@@ -53,16 +53,16 @@ body {margin-bottom: 40px !important;}
         float: none!important;
         margin: 7.5px -15px;
         >li {
-            float: none;    
+            float: none;
             >a {
                 padding-top: 10px;
                 padding-bottom: 10px;
             }
         }
     }
-   
-    
-    
+
+
+
     .collapsing {   // since 3.1.0
         overflow: hidden !important;
     }
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // plugin stellar
 .backgroundSizeCover {
-    -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;    
+    -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
 }
 .textShadow1 {
     text-shadow: 0 2px 0 black, 1px 0 20px black, 0 1px 20px black;
@@ -94,13 +94,13 @@ h1, h2, h3, h4, h5, h6 {
     display: block; font-size: 38px; line-height: 38px;
 }
 #img-stellar-club-plage {
-    background-image: url("../img/enfant-plage-ocean2.jpg");
+    background-image: url("../../img/enfant-plage-ocean2.jpg");
 }
 #img-stellar-ecole-natation {
-    background-image: url("../img/ecole_natation.jpg");
+    background-image: url("../../img/ecole_natation.jpg");
 }
 #img-stellar-remise-forme {
-    background-image: url("../img/remise-en-forme-plage.jpg");    
+    background-image: url("../../img/remise-en-forme-plage.jpg");
 }
 #img-stellar-ecole-natation span {      // aucune contrainte d'écran pour cette image
     padding-top: 300px;
@@ -161,7 +161,7 @@ section.content {
             margin-top: -50px;
         }
     }
-    
+
 }
 /*section#content-club-plage {
     background-image: url("../img/dessin-plage.png");
@@ -188,7 +188,7 @@ article {
         p {
             hyphens: auto;
             text-align: justify;
-            word-spacing: 0.3ex;            
+            word-spacing: 0.3ex;
         }
     }
     .columns-small {
@@ -270,7 +270,7 @@ section#content-partenariat ul.thumbnails li div.thumbnail {
 
 /* main class */
 .logo-facebook span {
-    background-image: url("../img/logo-facebook.png");
+    background-image: url("../../img/logo-facebook.png");
     background-repeat: no-repeat;
     background-position: center right;
     padding-right: 20px;
@@ -286,7 +286,7 @@ section#content-partenariat ul.thumbnails li div.thumbnail {
 }
 .arrow-blue {
     display: block;
-    background-image: url("../img/arrow-blue.png");
+    background-image: url("../../img/arrow-blue.png");
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: 75px;
