new site bootstrap like and implementation of plan prices

--- a/css/less/variables.less
+++ b/css/less/variables.less
@@ -1,2 +1,11 @@
 @grid-float-breakpoint: 1130px;
 @fa-font-path: "./font-awesome-4.3.0/fonts";
+
+@blue: #95cae5;
+@blue-dark: darken(@blue, 20%);
+@blue-light: #d4ebf7;
+
+@text-color: rgb(24, 2, 3);
+@link-color: @blue-dark;
+
+@page-header-border-color: @blue-light;
