--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -3,3 +3,9 @@
         #elements > #border.radius(@topright, @bottomright, @bottomleft, @topleft);
     }
 }
+
+.text-color-facebook {
+    > a {
+        color: #3B5998;
+    }
+}
