--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,4 +1,5 @@
-@fa-font-path: "../../bower_components/fontawesome/fonts";
+@fa-font-path: "/bower_components/fontawesome/fonts";
+@icon-font-path: "/bower_components/bootstrap/dist/fonts";
 
 @background-img-path: "";
 
