--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -9,3 +9,11 @@
         color: #3B5998;
     }
 }
+
+.text-shadow-1 {
+    #elements > #shadow.text(~"0 2px 0 black, 1px 0 20px black, 0 1px 20px black");
+}
+
+.text-shadow-2 {
+    #elements > #shadow.text(~"0 2px 0 black, 1px 0 10px black, 0 1px 10px black, -1px 0 10px black, 0 -1px 10px black");
+}
