--- a/src/app/equipe/equipe.html
+++ b/src/app/equipe/equipe.html
@@ -7,7 +7,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <figure class="thumbnail" itemprop="member" itemscope itemtype="http://schema.org/Person">
-                        <img src="img/alize.jpg" alt="" itemprop="image">
+                        <img src="/dist/img/alize.jpg" alt="" itemprop="image">
                         <figcaption class="caption">
                             <h3 itemprop="name">Alizé</h3>
                             <p itemprop="description">Animatrice au mois d'Août, Alizé est étudiante au centre de formation d’éducateurs de jeunes enfants à Malakoff. Son parcours est riche de nombreux stages.</p>
@@ -17,7 +17,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <figure class="thumbnail" itemprop="member" itemscope itemtype="http://schema.org/Person">
-                        <img src="img/aminata.jpg" alt="" itemprop="image">
+                        <img src="/dist/img/aminata.jpg" alt="" itemprop="image">
                         <figcaption class="caption">
                             <h3 itemprop="name">Aminata</h3>
                             <p itemprop="description">Forte d’un passé de haut niveau en patinage artistique, Aminata a passé ses diplômes pour pouvoir travailler auprès des enfants. Elle est animatrice.</p>
@@ -27,7 +27,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <figure class="thumbnail" itemprop="member" itemscope itemtype="http://schema.org/Person">
-                        <img src="img/noemie.jpg" alt="" itemprop="image">
+                        <img src="/dist/img/noemie.jpg" alt="" itemprop="image">
                         <figcaption class="caption">
                             <h3 itemprop="name">Noémie</h3>
                             <p itemprop="description">Animatrice au mois de Juillet, Noémie est étudiante. Elle se prépare à devenir éducatrice auprès de jeunes enfants.</p>
@@ -37,7 +37,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <figure class="thumbnail" itemprop="member" itemscope itemtype="http://schema.org/Person">
-                        <img src="img/julien.jpg" alt="" itemprop="image">
+                        <img src="/dist/img/julien.jpg" alt="" itemprop="image">
                         <figcaption class="caption">
                             <h3 itemprop="name">Julien</h3>
                             <p itemprop="description">Titulaire d'un Master 2 STAPS en préparation physique ainsi que du BEESAN (Diplôme d'Etat de Maître-Nageur), Julien est maître-nageur, il assure aussi la remise en forme des adultes le matin ainsi que le longe-côte.</p>
@@ -47,7 +47,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <figure class="thumbnail" itemprop="member" itemscope itemtype="http://schema.org/Person">
-                        <img src="img/nicolas.jpg" alt="" itemprop="image">
+                        <img src="/dist/img/nicolas.jpg" alt="" itemprop="image">
                         <figcaption class="caption">
                             <h3 itemprop="name">Nicolas</h3>
                             <p itemprop="description">Titulaire d'un Master 2 STAPS ainsi que du BEESAN (Diplôme d'Etat de Maître-Nageur), Nicolas est maître-nageur durant les 2 mois d'été.
@@ -58,7 +58,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <figure class="thumbnail" itemprop="member" itemscope itemtype="http://schema.org/Person">
-                        <img src="img/yoann.jpg" alt="" itemprop="image">
+                        <img src="/dist/img/yoann.jpg" alt="" itemprop="image">
                         <figcaption class="caption">
                             <h3 itemprop="name">Yoann</h3>
                             <p itemprop="description">Etudiant en Master 2 STAPS, spécialiste de la préparation physique, Yoann est animateur au mois de Juillet.</p>
