--- a/src/app/partenaire/partenaire.html
+++ b/src/app/partenaire/partenaire.html
@@ -13,7 +13,7 @@
                         <h3>Famille Plus</h3>
                     </div>
                     <div class="panel-body">
-                        <img src="img/logo/famille-plus.png" alt="" />
+                        <img src="/dist/img/logo/famille-plus.png" alt="" />
                     </div>
                     <div class="panel-footer panel-footer-blue-light">
                         <a href="http://www.familleplus.fr/" title="Famille Plus" class="btn btn-default" role="button" target="_blank">Voir le site</a>
@@ -27,7 +27,7 @@
                         <h3>Maison Lucas</h3>
                     </div>
                     <div class="panel-body">
-                        <img src="img/logo/maison-lucas.png" alt="">
+                        <img src="/dist/img/logo/maison-lucas.png" alt="">
                     </div>
                     <div class="panel-footer panel-footer-blue-light">
                         <a href="http://www.maisonlucas.net/" title="Maison Lucas" class="btn btn-default" role="button" target="_blank">Voir le site</a>
@@ -41,7 +41,7 @@
                         <h3>La Cour D'Orgères</h3>
                     </div>
                     <div class="panel-body">
-                        <img src="img/logo/la-cour-d-orgeres.png" alt="">
+                        <img src="/dist/img/logo/la-cour-d-orgeres.png" alt="">
                     </div>
                     <div class="panel-footer panel-footer-blue-light">
                         <a href="http://www.lacourdorgeres.com/" title="La Cour D'Orgères" class="btn btn-default" role="button" target="_blank">Voir le site</a>
@@ -55,7 +55,7 @@
                         <h3>Brioches Pasquier</h3>
                     </div>
                     <div class="panel-body">
-                        <img src="img/logo/pasquier.png" alt="">
+                        <img src="/dist/img/logo/pasquier.png" alt="">
                     </div>
                     <div class="panel-footer panel-footer-blue-light">
                         <a href="http://www.pasquier.fr/" title="Brioches Pasquier" class="btn btn-default" role="button" target="_blank">Voir le site</a>
@@ -69,7 +69,7 @@
                         <h3>La Belle-Îloise</h3>
                     </div>
                     <div class="panel-body">
-                        <img src="img/logo/la-belle-iloise.png" alt="">
+                        <img src="/dist/img/logo/la-belle-iloise.png" alt="">
                     </div>
                     <div class="panel-footer panel-footer-blue-light">
                         <a href="http://www.labelleiloise.fr/" title="La Belle-Îloise" class="btn btn-default" role="button" target="_blank">Voir le site</a>
