--- a/src/app/ecole-natation/ecole-natation.html
+++ b/src/app/ecole-natation/ecole-natation.html
@@ -28,7 +28,7 @@
 
         <article class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1">
             <p>
-                <img src="img/piscine.jpg" class="img-thumbnail img-responsive" />
+                <img src="/dist/img/piscine.jpg" class="img-thumbnail img-responsive" />
             </p>
         </article>
     </div>
