--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,6 +6,7 @@
 $black:                       #180203;
 $blue:                        #08c;
 $deep-blue:                   #005580;
+$facebook:                    #3b5998;
 $light-blue:                  #d4ebf7;
 $light-gray:                  #f5f5f5;
 $real-black:                  #000;
