--- a/src/variables.scss
+++ b/src/variables.scss
@@ -34,7 +34,8 @@ $font-size-h3:                1.25rem;
 $modal-backdrop-bg:           $real-black;
 
 $navbar-light-color:          $blue;
-$navbar-light-hover-color:    $deep-blue;
+$navbar-light-hover-color:    $blue;
+$navbar-light-active-color:   $white;
 
 $btn-secondary-color:         $blue;
 $btn-secondary-bg:            $white;
