--- a/src/styles/_components.StandUpPaddle.scss
+++ b/src/styles/_components.StandUpPaddle.scss
@@ -1,3 +1,7 @@
+@import "bootstrap/scss/bootstrap.scss";
+
+@import "./_components.variables.scss";
+
 .StandUpPaddle {
     .parallax {
         span {
