--- a/src/styles/_components.Fitness.scss
+++ b/src/styles/_components.Fitness.scss
@@ -1,6 +1,6 @@
 @import "bootstrap/scss/bootstrap.scss";
 
-@import "./_components.variables.scss";
+@import "./variables";
 
 .Fitness {
     .parallax {
