--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -76,8 +76,10 @@ span.fa-arrow-right {
 }
 
 .table.text-center {
-    tbody, thead {
-        td, th {
+    tbody,
+    thead {
+        td,
+        th {
             text-align: center;
         }
     }
@@ -105,5 +107,5 @@ span.fa-arrow-right {
 }
 .btn-secondary:focus,
 .btn-secondary.focus {
-    box-shadow: 0 0 0 0.1rem rgba(0, 85, 128, 0.25)
+    box-shadow: 0 0 0 0.1rem rgba(0, 85, 128, 0.25);
 }
